# ft-hpc-seminar

./: .gitignore  README.md
Code/Mandelbrot/: CMakeLists.txt  main.cpp  mandelbrot_set.h  mandelbrot_set_hpx_coarse.cpp  mandelbrot_set_hpx_coarseConsumer.cpp  mandelbrot_set_hpx_fine.cpp  mandelbrot_set_hpx_ultrafine.cpp  mandelbrot_set_pthreads.cpp  runExperiments.sh
Paper/: Makefile  ft-hpc-paper.tex
Paper/Bib/: references.bib
Paper/Sections/: 0_abstract.tex  1_introduction.tex  2_resource_awareness.tex  3_HPX.tex  4_examples.tex  5_conclusion.tex
Paper/Style/: packages.tex
Presentation/: Makefile  ft-hpc-presentation.tex  presentation_script.txt
